--- a/recap.html
+++ b/recap.html
@@ -45,6 +45,11 @@
     </style>
 </head>
 <body>
+    <a href="index.html" style="position: absolute; top: 20px; left: 20px; text-decoration: none;">
+        <button style="padding: 5px 10px; font-size: 12px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">
+            Retour
+        </button>
+    </a>
     <h1>Récapitulatif des Totaux des Produits</h1>
    
     <div class="table-container">
