--- a/recapsimple.html
+++ b/recapsimple.html
@@ -46,7 +46,12 @@
 </head>
 <body>
     <h1>Récapitulatif des commandes</h1>
-   
+    
+    <a href="index.html" style="position: absolute; top: 20px; left: 20px; text-decoration: none;">
+        <button style="padding: 5px 10px; font-size: 12px; background-color: #007bff; color: white; border: none; border-radius: 4px; cursor: pointer;">
+            Retour
+        </button>
+    </a>
     <div class="table-container">
         <table id="ordersTable">
             <thead>
