bouton retour et rafraichir

--- a/recapsimple.html
+++ b/recapsimple.html
@@ -52,6 +52,11 @@
             Retour
         </button>
     </a>
+
+    <button onclick="location.reload();" style="position: absolute; top: 20px; left: 100px; padding: 5px 10px; font-size: 12px; background-color: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer;">
+        Rafraîchir
+    </button>
+
     <div class="table-container">
         <table id="ordersTable">
             <thead>
