--- a/recap.html
+++ b/recap.html
@@ -50,6 +50,11 @@
             Retour
         </button>
     </a>
+
+    <button onclick="location.reload();" style="position: absolute; top: 20px; left: 100px; padding: 5px 10px; font-size: 12px; background-color: #28a745; color: white; border: none; border-radius: 4px; cursor: pointer;">
+        Rafraîchir
+    </button>
+
     <h1>Récapitulatif des Totaux des Produits</h1>
    
     <div class="table-container">
