correction prob ganache

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <td class="product-total">0,00€</td>
     </tr>
     <tr>
-        <td>Ballotin Festif - 24 Ganaches, Pralines, Pâtes d'Amandes - Lait</td>
+        <td>Ballotin Festif - 24 Ganaches, Pralines, Pâtes d'Amandes - Noir</td>
         <td>230g</td>
         <td>16,70€</td>
         <td>
