recap valeur 2 chiffres après la virgule

--- a/recap.html
+++ b/recap.html
@@ -153,7 +153,7 @@
             for (const [product, quantity] of Object.entries(totals)) {
                 const row = `<tr>
                     <td>${product}</td>
-                    <td>${quantity}</td>
+                    <td>${product === 'Total' ? Number(quantity).toFixed(2) : quantity}</td>
                 </tr>`;
                 ordersBody.innerHTML += row;
             }
