top vendeur + bouton index

--- a/index.html
+++ b/index.html
@@ -443,10 +443,13 @@
                 </button>
             </div>
             
-            <!-- Nouveau bouton pour la page problème -->
-            <div style="margin-top: 20px; display: none;">
-                <button type="button" onclick="window.location.href='probleme.html'" style="background-color: #dc3545;">
-                    Signaler un problème
+            <!-- Nouveaux boutons -->
+            <div class="button-container" style="margin-top: 20px; display: flex; justify-content: space-between;">
+                <button type="button" onclick="window.location.href='recap_orderid.html'" style="margin-right: 10px; background-color: #17a2b8;">
+                    Récapitulatif par Order ID
+                </button>
+                <button type="button" onclick="window.location.href='top_vendeurs.html'" style="background-color: #ffc107; color: black;">
+                    Top 10 des Vendeurs
                 </button>
             </div>
 
