--- a/index.html
+++ b/index.html
@@ -434,25 +434,28 @@
 
             <button type="submit" class="submit-button">Valider</button>
 
-            <div class="button-container" style="margin-top: 20px; display: flex; justify-content: space-between;">
-                <button type="button" onclick="window.location.href='recap.html'" style="margin-right: 10px;">
-                    Voir le Récapitulatif global
-                </button>
-                <button type="button" onclick="window.location.href='recapsimple.html'">
-                    Voir le Récapitulatif détaillé
-                </button>
-            </div>
             
-            <!-- Nouveaux boutons -->
-            <div class="button-container" style="margin-top: 20px; display: flex; justify-content: space-between;">
-                <button type="button" onclick="window.location.href='recap_orderid.html'" style="margin-right: 10px; background-color: #17a2b8;">
-                    Récapitulatif par Order ID
-                </button>
-                <button type="button" onclick="window.location.href='top_vendeurs.html'" style="background-color: #ffc107; color: black;">
-                    Top 10 des Vendeurs
+
+            <!-- Bouton Admin -->
+            <div style="margin-top: 20px;">
+                <button type="button" 
+                        onclick="window.location.href='admin.html'" 
+                        style="
+                            width: 100%;
+                            background-color: #6c757d;
+                            color: white;
+                            padding: 12px;
+                            border: none;
+                            border-radius: 4px;
+                            font-weight: bold;
+                            cursor: pointer;
+                            margin-bottom: 10px;
+                        ">
+                    Administration
                 </button>
             </div>
 
+      
         </form>
     <footer style="text-align: center; margin-top: 20px; padding: 10px; font-size: 14px; color: #6c757d;">
     Tous droits réservés ALRIC Gaël
