--- a/recapsimple.html
+++ b/recapsimple.html
@@ -42,6 +42,19 @@
         tr:nth-child(even) {
             background-color: #f9f9f9;
         }
+        th button {
+            padding: 2px 8px;
+            margin-left: 5px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+            font-size: 12px;
+        }
+        th button:hover {
+            background-color: #0056b3;
+        }
     </style>
 </head>
 <body>
@@ -64,31 +77,31 @@
                     <th>Order ID <input type="text" id="searchId" oninput="filterTable()"></th>
                     <th>Nom du Vendeur <input type="text" id="searchVendor" oninput="filterTable()"></th>
                     <th>Nom du Client <input type="text" id="searchClient" oninput="filterTable()"></th>
-                    <th>BCCOL Quantité</th>
-                    <th>EGPN170 Quantité</th>
-                    <th>PGNA110 Quantité</th>
-                    <th>PGCN110 Quantité</th>
-                    <th>BCGCS Quantité</th>
-                    <th>TLCS80A Quantité</th>
-                    <th>TNP80 Quantité</th>
-                    <th>TNBAY80 Quantité</th>
-                    <th>TBA80 Quantité</th>
-                    <th>PCL110 Quantité</th>
-                    <th>PCLC110 Quantité</th>
-                    <th>PCN110 Quantité</th>
-                    <th>PVMN110 Quantité</th>
-                    <th>PVML110 Quantité</th>
-                    <th>PNLC110 Quantité</th>
-                    <th>PANC110 Quantité</th>
-                    <th>ETPOF Quantité</th>
-                    <th>PON130 Quantité</th>
-                    <th>BACM230F Quantité</th>
-                    <th>BACN230F Quantité</th>
-                    <th>BCACM540 Quantité</th>
-                    <th>PGNN Quantité</th>
-                    <th>PT110 Quantité</th>
-                    <th>PSANP3 Quantité</th>
-                    <th>PSANL Quantité</th>
+                    <th>BCCOL Quantité <button onclick="filterNonZero(3)">Voir</button></th>
+                    <th>EGPN170 Quantité <button onclick="filterNonZero(4)">Voir</button></th>
+                    <th>PGNA110 Quantité <button onclick="filterNonZero(5)">Voir</button></th>
+                    <th>PGCN110 Quantité <button onclick="filterNonZero(6)">Voir</button></th>
+                    <th>BCGCS Quantité <button onclick="filterNonZero(7)">Voir</button></th>
+                    <th>TLCS80A Quantité <button onclick="filterNonZero(8)">Voir</button></th>
+                    <th>TNP80 Quantité <button onclick="filterNonZero(9)">Voir</button></th>
+                    <th>TNBAY80 Quantité <button onclick="filterNonZero(10)">Voir</button></th>
+                    <th>TBA80 Quantité <button onclick="filterNonZero(11)">Voir</button></th>
+                    <th>PCL110 Quantité <button onclick="filterNonZero(12)">Voir</button></th>
+                    <th>PCLC110 Quantité <button onclick="filterNonZero(13)">Voir</button></th>
+                    <th>PCN110 Quantité <button onclick="filterNonZero(14)">Voir</button></th>
+                    <th>PVMN110 Quantité <button onclick="filterNonZero(15)">Voir</button></th>
+                    <th>PVML110 Quantité <button onclick="filterNonZero(16)">Voir</button></th>
+                    <th>PNLC110 Quantité <button onclick="filterNonZero(17)">Voir</button></th>
+                    <th>PANC110 Quantité <button onclick="filterNonZero(18)">Voir</button></th>
+                    <th>ETPOF Quantité <button onclick="filterNonZero(19)">Voir</button></th>
+                    <th>PON130 Quantité <button onclick="filterNonZero(20)">Voir</button></th>
+                    <th>BACM230F Quantité <button onclick="filterNonZero(21)">Voir</button></th>
+                    <th>BACN230F Quantité <button onclick="filterNonZero(22)">Voir</button></th>
+                    <th>BCACM540 Quantité <button onclick="filterNonZero(23)">Voir</button></th>
+                    <th>PGNN Quantité <button onclick="filterNonZero(24)">Voir</button></th>
+                    <th>PT110 Quantité <button onclick="filterNonZero(25)">Voir</button></th>
+                    <th>PSANP3 Quantité <button onclick="filterNonZero(26)">Voir</button></th>
+                    <th>PSANL Quantité <button onclick="filterNonZero(27)">Voir</button></th>
                     <th>Méthode de Paiement</th>
                     <th>Numéro de Chèque</th>
                     <th>Montant Total</th>
@@ -161,20 +174,45 @@
         }
         loadData()
 
+        function filterNonZero(columnIndex) {
+            const ordersBody = document.getElementById('ordersBody');
+            const rows = ordersBody.getElementsByTagName('tr');
+            let isFiltered = false;
+
+            // Vérifier si le tableau est déjà filtré
+            if (rows.length > 0 && rows[0].style.display === 'none') {
+                isFiltered = true;
+            }
+
+            for (let i = 0; i < rows.length; i++) {
+                const cells = rows[i].getElementsByTagName('td');
+                const quantity = parseInt(cells[columnIndex].textContent) || 0;
+
+                if (isFiltered) {
+                    // Si déjà filtré, on montre tout
+                    rows[i].style.display = '';
+                } else {
+                    // Sinon on cache les lignes avec quantité 0
+                    rows[i].style.display = quantity > 0 ? '' : 'none';
+                }
+            }
+        }
+
         function filterTable() {
             const searchId = document.getElementById('searchId').value.toLowerCase();
             const searchVendor = document.getElementById('searchVendor').value.toLowerCase();
             const searchClient = document.getElementById('searchClient').value.toLowerCase();
+
             const ordersBody = document.getElementById('ordersBody');
             const rows = ordersBody.getElementsByTagName('tr');
 
             for (let i = 0; i < rows.length; i++) {
                 const cells = rows[i].getElementsByTagName('td');
-                const orderIdMatch = cells[0].textContent.toLowerCase().includes(searchId);
+                const idMatch = cells[0].textContent.toLowerCase().includes(searchId);
                 const vendorMatch = cells[1].textContent.toLowerCase().includes(searchVendor);
                 const clientMatch = cells[2].textContent.toLowerCase().includes(searchClient);
 
-                if (orderIdMatch && vendorMatch && clientMatch) {
+                if (idMatch && vendorMatch && clientMatch) {
                     rows[i].style.display = '';
                 } else {
                     rows[i].style.display = 'none';
