--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
     <tr>
         <td>Praliné Croquant - Lait</td>
         <td>210g</td>
-        <td>15,90€</td>
+        <td>16,70€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="15.90" class="quantity" value="0">
-            <input type="hidden" name="ref_praline_lait">
+            <input type="number" name="quantity" min="0" data-price="16.70" class="quantity" value="0">
+            <input type="hidden" name="ref_praline_lait" value="BCCOL">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
