--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bon de Commande Partenariat Noël 2024</title>
+    <title>Bon de Commande Partenariat Noël 2025</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -81,7 +81,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Bon de Commande - Partenariat Noël 2024</h1>
+        <h1>Bon de Commande - Partenariat Noël 2025</h1>
         <form id="order-form">
             <div class="client-info">
                 <label for="reseller-class">Classe du Revendeur:</label>
@@ -168,9 +168,9 @@
     <tr>
         <td>Ganache à la Pulpe de Cerises Noires - Noir</td>
         <td>110g</td>
-        <td>8,10€</td>
+        <td>8,60€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="8.10" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="8.60" class="quantity" value="0">
             <input type="hidden" name="ref_ganache_cerises_noires_noir" value="PGCN110">
         </td>
         <td class="product-total">0,00€</td>
@@ -178,9 +178,9 @@
     <tr>
         <td>Ganache Caramel au Sel de Salies de Béarn - Lait</td>
         <td>210g</td>
-        <td>15,90€</td>
+        <td>16,70€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="15.90" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="16.70" class="quantity" value="0">
             <input type="hidden" name="ref_ganache_caramel_lait" value="BCGG210">
         </td>
         <td class="product-total">0,00€</td>
@@ -192,9 +192,9 @@
     <tr>
         <td>Tablette Lait Caramel Sel de Salies de Béarn</td>
         <td>80g</td>
-        <td>5,50€</td>
+        <td>5,80€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="5.50" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="5.80" class="quantity" value="0">
             <input type="hidden" name="ref_tablette_caramel_lait" value="TLC580">
         </td>
         <td class="product-total">0,00€</td>
@@ -202,29 +202,29 @@
     <tr>
         <td>Tablette Noir Piment</td>
         <td>80g</td>
-        <td>5,50€</td>
+        <td>5,80€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="5.50" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="5.80" class="quantity" value="0">
             <input type="hidden" name="ref_tablette_noir_piment" value="TNPN80">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
     <tr>
-        <td>Tablette Noir Bayonne</td>
+        <td>Tablette Noir Cerise</td>
         <td>80g</td>
-        <td>5,50€</td>
+        <td>5,80€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="5.50" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="5.80" class="quantity" value="0">
             <input type="hidden" name="ref_tablette_noir_bayonne" value="TNBA80">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
     <tr>
-        <td>Tablette Ambrée - Blanc (nouveau)</td>
+        <td>Tablette Ambrée - Blanc</td>
         <td>80g</td>
-        <td>5,50€</td>
+        <td>5,80€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="5.50" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="5.80" class="quantity" value="0">
             <input type="hidden" name="ref_tablette_ambree_blanc" value="TBA80">
         </td>
         <td class="product-total">0,00€</td>
