--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <td>5,80€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="5.80" class="quantity" value="0">
-            <input type="hidden" name="ref_tablette_noir_bayonne" value="TNBA80">
+            <input type="hidden" name="ref_tablette_cerise" value="TNCER80A">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
@@ -236,9 +236,9 @@
     <tr>
         <td>Céréale Croustillante Chocolat - Lait</td>
         <td>110g</td>
-        <td>7,70€</td>
+        <td>7,85€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="7.70" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="7.85" class="quantity" value="0">
             <input type="hidden" name="ref_cereale_lait" value="PCL110">
         </td>
         <td class="product-total">0,00€</td>
@@ -246,9 +246,9 @@
     <tr>
         <td>Céréale Croustillante Chocolat Lait Caramel</td>
         <td>110g</td>
-        <td>7,70€</td>
+        <td>7,85€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="7.70" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="7.85" class="quantity" value="0">
             <input type="hidden" name="ref_cereale_lait_caramel" value="PCLT110">
         </td>
         <td class="product-total">0,00€</td>
@@ -256,9 +256,9 @@
     <tr>
         <td>Céréale Croustillante Chocolat - Noir</td>
         <td>110g</td>
-        <td>7,70€</td>
+        <td>7,85€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="7.70" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="7.85" class="quantity" value="0">
             <input type="hidden" name="ref_cereale_noir" value="PCN110">
         </td>
         <td class="product-total">0,00€</td>
@@ -266,9 +266,9 @@
     <tr>
         <td>Mendiant Noir Fruits Secs</td>
         <td>110g</td>
-        <td>8,50€</td>
+        <td>8,90€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="8.50" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="8.90" class="quantity" value="0">
             <input type="hidden" name="ref_mendiant_noir" value="PVMN110">
         </td>
         <td class="product-total">0,00€</td>
