--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
     <tr>
         <td>Mendiant Lait Fruits Secs</td>
         <td>110g</td>
-        <td>8,50€</td>
+        <td>8,90€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="8.50" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="8.90" class="quantity" value="0">
             <input type="hidden" name="ref_mendiant_lait" value="PMLC110">
         </td>
         <td class="product-total">0,00€</td>
@@ -286,9 +286,9 @@
     <tr>
         <td>Noisettes Lait Poudre de Cacao</td>
         <td>110g</td>
-        <td>8,00€</td>
+        <td>8,20€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="8.00" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="8.20" class="quantity" value="0">
             <input type="hidden" name="ref_noisettes_lait" value="PNLC110">
         </td>
         <td class="product-total">0,00€</td>
@@ -296,29 +296,29 @@
     <tr>
         <td>Amandes Noir Poudre de Cacao</td>
         <td>110g</td>
-        <td>8,00€</td>
+        <td>8,20€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="8.00" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="8.20" class="quantity" value="0">
             <input type="hidden" name="ref_amandes_noir" value="PNAIC110">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
     <tr>
-        <td>Pâte de Fruits - Pomme Framboise (nouveau)</td>
+        <td>Pâte de Fruits - Pomme Framboise</td>
         <td>250g</td>
         <td>9,95€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="9.95" class="quantity" value="0">
-            <input type="hidden" name="ref_pate_fruits" value="EPTOP250">
+            <input type="hidden" name="ref_pate_fruits" value="ETPOF">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
     <tr>
         <td>Orangette enrobée Chocolat - Noir</td>
         <td>130g</td>
-        <td>11,00€</td>
+        <td>11,75€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="11.00" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="11.75" class="quantity" value="0">
             <input type="hidden" name="ref_orangette_noir" value="PON130">
         </td>
         <td class="product-total">0,00€</td>
