--- a/index.html
+++ b/index.html
@@ -330,9 +330,9 @@
     <tr>
         <td>Ballotin Festif - 24 Ganaches, Pralines, Pâtes d'Amandes - Noir et Lait</td>
         <td>230g</td>
-        <td>16,70€</td>
+        <td>17,60€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="16.70" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="17.60" class="quantity" value="0">
             <input type="hidden" name="ref_ballotin_noir" value="BACM230F">
         </td>
         <td class="product-total">0,00€</td>
@@ -343,17 +343,17 @@
         <td>16,70€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="16.70" class="quantity" value="0">
-            <input type="hidden" name="ref_ballotin_lait" value="BACM230L">
+            <input type="hidden" name="ref_ballotin_lait" value="BACN230M">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
     <tr>
         <td>Boîte Cadeau - 54 Ganaches, Pralines, Pâtes d'Amandes - Noir et Lait</td>
         <td>530g</td>
-        <td>39,00€</td>
+        <td>41,90€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="39.00" class="quantity" value="0">
-            <input type="hidden" name="ref_boite_cadeau" value="BACM540">
+            <input type="number" name="quantity" min="0" data-price="41.90" class="quantity" value="0">
+            <input type="hidden" name="ref_boite_cadeau" value="BCACM540">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
@@ -362,21 +362,21 @@
 <h2>Chocolats de Noël</h2>
 <table>
     <tr>
-        <td>Ganache Épices de Noël - Noir (nouveau)</td>
+        <td>Praliné Mais - NOIR (nouveau)</td>
         <td>110g</td>
-        <td>8,10€</td>
+        <td>8,60€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="8.10" class="quantity" value="0">
-            <input type="hidden" name="ref_ganache_epices_noir" value="PGNN110">
+            <input type="number" name="quantity" min="0" data-price="8.60" class="quantity" value="0">
+            <input type="hidden" name="ref_prealine_mais_noir" value="PGNN">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
     <tr>
         <td>Truffe au Rhum</td>
         <td>110g</td>
-        <td>8,10€</td>
+        <td>8,60€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="8.10" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="8.60" class="quantity" value="0">
             <input type="hidden" name="ref_truffe_rhum" value="PT110">
         </td>
         <td class="product-total">0,00€</td>
@@ -386,21 +386,21 @@
 <h2>Le Coin des Enfants</h2>
 <table>
     <tr>
-        <td>Moulage Sapin et sa Garniture</td>
+        <td>Moulage Renne et sa Garniture (nouveau)</td>
         <td>180g</td>
-        <td>11,00€</td>
+        <td>11,50€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="11.00" class="quantity" value="0">
-            <input type="hidden" name="ref_moulage_sapin" value="PSANP3">
+            <input type="number" name="quantity" min="0" data-price="11.50" class="quantity" value="0">
+            <input type="hidden" name="ref_moulage_renne" value="PSANP3">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
     <tr>
         <td>Mini Tablette Noël et sa Garniture</td>
         <td>110g</td>
-        <td>6,50€</td>
+        <td>6,95€</td>
         <td>
-            <input type="number" name="quantity" min="0" data-price="6.50" class="quantity" value="0">
+            <input type="number" name="quantity" min="0" data-price="6.95" class="quantity" value="0">
             <input type="hidden" name="ref_tablette_noel" value="PSANL">
         </td>
         <td class="product-total">0,00€</td>
