--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         <td>16,70€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="16.70" class="quantity" value="0">
-            <input type="hidden" name="ref_ganache_caramel_lait" value="BCGG210">
+            <input type="hidden" name="ref_ganache_caramel_lait" value="BCGGS">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
@@ -195,7 +195,7 @@
         <td>5,80€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="5.80" class="quantity" value="0">
-            <input type="hidden" name="ref_tablette_caramel_lait" value="TLC580">
+            <input type="hidden" name="ref_tablette_caramel_lait" value="TLCS80A">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
@@ -205,7 +205,7 @@
         <td>5,80€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="5.80" class="quantity" value="0">
-            <input type="hidden" name="ref_tablette_noir_piment" value="TNPN80">
+            <input type="hidden" name="ref_tablette_noir_piment" value="TNP80">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
@@ -249,7 +249,7 @@
         <td>7,85€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="7.85" class="quantity" value="0">
-            <input type="hidden" name="ref_cereale_lait_caramel" value="PCLT110">
+            <input type="hidden" name="ref_cereale_lait_caramel" value="PCLC110">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
@@ -279,7 +279,7 @@
         <td>8,90€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="8.90" class="quantity" value="0">
-            <input type="hidden" name="ref_mendiant_lait" value="PMLC110">
+            <input type="hidden" name="ref_mendiant_lait" value="PVML110">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
@@ -299,7 +299,7 @@
         <td>8,20€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="8.20" class="quantity" value="0">
-            <input type="hidden" name="ref_amandes_noir" value="PNAIC110">
+            <input type="hidden" name="ref_amandes_noir" value="PANC110">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
@@ -343,7 +343,7 @@
         <td>16,70€</td>
         <td>
             <input type="number" name="quantity" min="0" data-price="16.70" class="quantity" value="0">
-            <input type="hidden" name="ref_ballotin_lait" value="BACN230M">
+            <input type="hidden" name="ref_ballotin_lait" value="BACN230F">
         </td>
         <td class="product-total">0,00€</td>
     </tr>
