--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
             BCGCS_quantity: parseInt(quantities[4].value),
             TLCS80A_quantity: parseInt(quantities[5].value),
             TNP80_quantity: parseInt(quantities[6].value),
-            TNBAY80_quantity: parseInt(quantities[7].value),
+            TNCERT80A_quantity: parseInt(quantities[7].value),
             TBA80_quantity: parseInt(quantities[8].value),
             PCL110_quantity: parseInt(quantities[9].value),
             PCLC110_quantity: parseInt(quantities[10].value),
