--- a/recap.html
+++ b/recap.html
@@ -127,7 +127,7 @@
                 totals.BCGCS += item.BCGCS_quantity || 0;
                 totals.TLCS80A += item.TLCS80A_quantity || 0;
                 totals.TNP80 += item.TNP80_quantity || 0;
-                totals.TNBAY80 += item.TNBAY80_quantity || 0;
+                totals.TNCERT80A += item.TNCERT80A_quantity || 0;
                 totals.TBA80 += item.TBA80_quantity || 0;
                 totals.PCL110 += item.PCL110_quantity || 0;
                 totals.PCLC110 += item.PCLC110_quantity || 0;
